--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -48,6 +48,7 @@
     <sys:Double x:Key="DetailsViewOverviewHeaderButtonsOpacity">1.0</sys:Double>
     <FontFamily x:Key="FontFamily">Trebuchet MS</FontFamily>
     <FontFamily x:Key="MonospaceFontFamily">Consolas</FontFamily>
+    <Thickness x:Key="PopupMenuPadding">0</Thickness>
     <Thickness x:Key="PopupBorderThickness">0</Thickness>
     <Thickness x:Key="ControlBorderThickness">0</Thickness>
     <sys:Double x:Key="EllipseBorderThickness">0</sys:Double>
@@ -62,6 +63,7 @@
                   TopRight="0"
                   BottomRight="0"
                   BottomLeft="{StaticResource ControlCornerRadiusValue}"/>
+    <CornerRadius x:Key="PopupsHoverBackgroundCornerRadius">0</CornerRadius>
     <CornerRadius x:Key="DetailsViewExtraButtonsCornerRadius">4</CornerRadius>
     <CornerRadius x:Key="ControlCornerRadiusSmall">3</CornerRadius>
     <CornerRadius x:Key="GridViewCoverCornerRadius">5</CornerRadius>
@@ -241,6 +243,8 @@
     <SolidColorBrush x:Key="NormalBrushDark" Color="{DynamicResource ControlBackgroundColor}" />
     <SolidColorBrush x:Key="NormalBorderBrush" Color="Transparent" />
     <SolidColorBrush x:Key="HoverBrush1" Color="{DynamicResource HighlightGlyphColor}" />
+    <SolidColorBrush x:Key="MenusPopupsHoverBrush" Color="#dcdedf" />
+    <SolidColorBrush x:Key="MenusPopupMouseOverForegroundBrush" Color="#3d4450" />
     <LinearGradientBrush x:Key="HoverBrush" StartPoint="0.0, 0.5" EndPoint="1.0, 0.5" >
         <GradientStop Color="#5A6069" Offset="0"/>
         <GradientStop Color="#50555D" Offset="0.5"/>
@@ -368,7 +372,7 @@
         <GradientStop Color="#686868" Offset="1"/>
     </LinearGradientBrush>
 
-    <SolidColorBrush x:Key="GameInfoContainerBackgroundBrush" Color="#000000" Opacity="0.2"/>
+    <SolidColorBrush x:Key="GameInfoContainerBackgroundBrush" Color="#33000000" />
     
     <!--region Details View Backgrounds brushes-->
     <LinearGradientBrush x:Key="DetailsSectionBackgroundBrush" StartPoint="0.5, 1.0" EndPoint="0.5, 0.0" >
